# tosics_cpx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  cpx-config.h  cpx.kdev4  gnq  main.cpp  runner2.cpp  runner2.hpp  snq
.kdev4/: cpx.kdev4
apps/: charcase.cpp  cplusplus_keywords.asc  cpprefsyms.asc  cppstripws.cpp  crc32.cpp  custom-stdinc-keywords.asc  dirinfo.txt  fingerprint3.cpp  gen_crc32table.cpp  sourcelines.cpp
archive/: 1st-labelvaluezipper.cpp  1st-varvresearch.cpp  cppstripws.cpp  dirinfo.txt  inc2gch  inc2pch  timings.txt
doc/: Analyses-and-design-of-a-better-coded-cpx.txt  CPX-Philosophy.md  Howto-build-cpx.txt  embedjavascript.txt  micro_preprocessor.txt  new_micropreprocessor_ideas.txt  todo.txt  unique-64bit-encoding.txt
etc/: clang-format  cpx_php.ini
inc/: cpx-all-after-script.hpp  cpx-all-before-script.hpp  cpx-common-impl.cpp  cpx-config.h  cpx-core.cpp  cpx-file-begin.hpp  cpx-generator.cpp  cpx-includes-readme.md  cpx-main-and-file-end.hpp  cpx-main-definition-signature.hpp  cpx-main-outer-catch-block.hpp  cpx-main-outer-try.hpp  cpx-script.cpp  cpx-unchanged.hpp  cpx_stdphp.hpp  marksourceline  touch_me.txt
scripts/: CPX-build-app  CPX-clean-WORK_DIR  CPX-common.sh  CPX-dsclns  CPX-monitor-reduce-log  CPX-new-proto  CPX-precmdproces_hash_compile.sh  CPX-preproces_hash_compile.sh  CPX-ramdisk  CPX-sher  CPX-shrink-runner  CPX-sourcelines  CPX-watch  My_alternative_hash_compile.sh  functions.sh  test-filter.sh
test/: My_alternative_hash_compile.sh  arg_output.cpp  boocircbuf.cpp  bracecount.cpp  c17namespace.cpp  char-table-from-stdin.txt  circle.cpp  circle.h  colors2.cpp  compile-errors.cpp  cplusplus_keywords.asc  cppstripws-test.txt  cppstripws.cpp  cpx-empty.cpp  custom-stdinc-keywords.asc  dummy.cpp  emlinescript.cpp  emlinescript2.cpp  emlinescript3.cpp  emlinescript4.cpp  forcefail.cpp  get-last-write-date-of-file-in-path.cpp  greetings.cpp  hello_meta_world.cpp  inner2_dummy.cpp  inner3_dummy.cpp  inner_dummy.cpp  labelvaluezipper.cpp  meta_colors.cpp  metaexec.cpp  metagreetings.cpp  nullstream.cpp  outptroverload.cpp  pplinetest.cpp  pplinetest2.cpp  pplinetest3.cpp  pure-circle-v2.cpp  pure-circle.cpp  rnr_source2.cpp  sleepdatetime.cpp  (+15 more)
test/tchfiles/: 1chfiles.cpp  readme.txt
